--- a/package.json
+++ b/package.json
@@ -46,5 +46,10 @@
   },
   "dependencies": {
     "axios": "^1.5.0"
+  },
+  "exports": {
+    "import": "./dist/index.esm.js",
+    "require": "./dist/index.js",
+    "types": "./dist/index.d.ts"
   }
 }
