--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "axios": "^1.5.0"
+    "axios": "^1.5.0",
+    "ethers": "^6.15.0"
   },
   "exports": {
     "import": "./dist/index.esm.js",
