--- a/package.json
+++ b/package.json
@@ -64,5 +64,10 @@
     "import": "./dist/index.esm.js",
     "require": "./dist/index.js",
     "types": "./dist/index.d.ts"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "semi": true,
+    "trailingComma": "es5"
   }
 }
